# halluci-mate

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/agents/: build-validator.md  code-architect.md  code-simplifier.md  verify-app.md
.claude/skills/commit-push-pr/: SKILL.md
.claude/skills/review-changes/: SKILL.md
.claude/skills/test-and-fix/: SKILL.md
docs/: data_format.md  eval_harness.md  generate_chess_tokens.py  inference_search.md  metrics_plan.md  training_strategy.md
scripts/: bench_kv_cache.py  compare.py  eval.py  finetune.py  play.py  prepare_data.py  prepare_finetune_data.py  run_vs_stockfish.py  setup.py  train.py  train_dpo.py
src/halluci_mate/: __init__.py  chess_tokenizer.py  data_preparation.py  game.py  game_metadata.py  game_to_sequences.py  inference.py  logging_setup.py  pgn_to_uci.py  uci_engine.py
src/halluci_mate/eval/: compare.py  dpo_export.py  metrics.py  records.py  runs.py
src/halluci_mate/eval/evaluators/: legal_rate.py  perplexity.py  vs_stockfish.py
src/halluci_mate/game/: game.py
tests/: chess_tokenizer_test.py  data_preparation_test.py  game_metadata_test.py  game_to_sequences_test.py  inference_test.py  pgn_to_uci_test.py  uci_engine_test.py
tests/eval/: compare_test.py  conftest.py  dpo_export_test.py  metrics_test.py  records_test.py  runs_test.py
tests/eval/evaluators/: legal_rate_test.py  perplexity_test.py  vs_stockfish_test.py
tests/helpers/: eval_records.py
tests/integration/: chess_inference_test.py  uci_roundtrip_test.py
tests/scripts/: eval_test.py
