[project]
name = "halluci-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacob Paulsen", email = "jpaulsen.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "chess>=1.11.2",
    "datasets>=4.8.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.66.0",
    "mlflow>=3.10.1",
    "flash-attn>=2.8.3",
    "bitsandbytes>=0.49.2",
]

[project.scripts]
halluci-mate = "halluci_mate:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.23",
]

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["halluci_mate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "FALSE", MAX_JOBS = "2"}
